Implement authentication using JWT
Added new endpoint /refresh. A new session
storage table has been created. Changed the
/sign-in endpoint so that it now generates
an accessToken and a RefreshToken. Now the
headers also use SetCookie to store the
refresh token by the client.

[Ticket: 21]
