# internal/transport/rest/auth.go
@@ -1,12 +1,12 @@
 package rest
 
 import (
-	"context"
 	"errors"
 	"net/http"
 
 	"github.com/andy-ahmedov/crud_service/internal/domain"
 	"github.com/gin-gonic/gin"
+	"github.com/sirupsen/logrus"
 )
 
 // @Summary SignUp
@@ -58,8 +58,7 @@ func (h *Handler) signIn(c *gin.Context) {
 		return
 	}
 
-	// использовать новую версию SignIn функции для получения двух токенов
-	token, err := h.userService.SignIn(context.TODO(), inp)
+	accessToken, refreshToken, err := h.userService.SignIn(c.Request.Context(), inp)
 	if err != nil {
 		if errors.Is(domain.ErrUserNotFound, err) {
 			handlerErrUserNotFound("SignIn", err, c)
@@ -69,19 +68,38 @@ func (h *Handler) signIn(c *gin.Context) {
 		return
 	}
 
-	// добавить хедер Set-Cookie в который будет будет даваться строка с рефрештокеном и указанием HttpOnly через точку с запятой и пробелом
-
-	// возвращать аксестокен в поле токена
-	c.JSON(http.StatusOK, gin.H{"token": token})
+	// c.Request.Header.Add("Set-Cookie", fmt.Sprintf("refresh-token='%s'; HttpOnly", refreshToken))
+	c.SetCookie("refresh-token", refreshToken, 0, "/auth", "localhost", false, true)
+	c.JSON(http.StatusOK, gin.H{"token": accessToken})
 }
 
-// функция refresh(w http.ResponseWriter, r *http.Request)
-// достаем из реквеста с помощью метода Cookie куки с названием refresh-token
-// используем метод Infof библиотеки логирования для вывода в stdout Value полученной куки
-// используем функцию RefreshTokens(r.Context(), ...) вставив значение полученной куки, и получаем аксес и рефрештокены. Если ошибка возвращаем Internal
-// добавить хедер Set-Cookie в который будет будет даваться строка с рефрештокеном и указанием HttpOnly через точку с запятой и пробелом
-// возвращаем аксесс токен в json с полем token
-// 
+// @Summary Refresh
+// @Tags auth
+// @Description Refresh token update.
+// @ID refresh
+// @Produce json
+// @Success 200 {string} gin.H "Refresh token has been successfully updated."
+// @Failure 400 {object} errResponse "Bad Request"
+// @Failure 500 {object} errResponse "Internal Server Error"
+// @Router /auth/refresh [post]
+func (h *Handler) refresh(c *gin.Context) {
+	cookie, err := c.Request.Cookie("refresh-token")
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+
+	logrus.Infof("%v", cookie.Value)
+
+	accesToken, refreshToken, err := h.userService.RefreshTokens(c.Request.Context(), cookie.Value)
+	if err != nil {
+		c.AbortWithStatusJSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+	}
+
+	// c.Request.Header.Add("Set-Cookie", fmt.Sprintf("refresh-token='%s'; HttpOnly", refreshToken))
+	c.SetCookie("refresh-token", refreshToken, 0, "/auth", "localhost", false, true)
+	c.JSON(http.StatusOK, gin.H{"token": accesToken})
+}
 
 func handlerErrUserNotFound(handler string, err error, c *gin.Context) {
 	logError(handler, domain.ErrUserNotFound.Error(), err)
